--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ project(tomato-timer)
 find_package(Curses REQUIRED)
 include_directories(${CURSES_INCLUDE_DIR})
 
-add_executable(main src/clock.c)
-target_link_libraries(main ${CURSES_LIBRARIES})
+add_executable(tomato src/clock.c)
+target_link_libraries(tomato ${CURSES_LIBRARIES})
 
